; ModuleID = '/home/carl/AnghaBench/kphp-kdb/TL/extr_tlclient.c_retrieve_current_scheme.c'
source_filename = "/home/carl/AnghaBench/kphp-kdb/TL/extr_tlclient.c_retrieve_current_scheme.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [2 x i8] c"w\00", align 1
@scheme_filename = common dso_local global i32* null, align 8
@.str.1 = private unnamed_addr constant [35 x i8] c"Couln't open \22%s\22 for writing. %m\0A\00", align 1
@.str.2 = private unnamed_addr constant [19 x i8] c"(help.getScheme 1)\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @retrieve_current_scheme(i8* %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca i8*, align 8
  store i8* %0, i8** %3, align 8
  %4 = load i8*, i8** %3, align 8
  %5 = call i32* @fopen(i8* %4, i8* getelementptr inbounds ([2 x i8], [2 x i8]* @.str, i64 0, i64 0))
  store i32* %5, i32** @scheme_filename, align 8
  %6 = load i32*, i32** @scheme_filename, align 8
  %7 = icmp eq i32* %6, null
  br i1 %7, label %8, label %11

8:                                                ; preds = %1
  %9 = load i8*, i8** %3, align 8
  %10 = call i32 @log_printf(i8* getelementptr inbounds ([35 x i8], [35 x i8]* @.str.1, i64 0, i64 0), i8* %9)
  store i32 -1, i32* %2, align 4
  br label %16

11:                                               ; preds = %1
  %12 = call i64 @send_rpc_command(i8* getelementptr inbounds ([19 x i8], [19 x i8]* @.str.2, i64 0, i64 0))
  %13 = icmp slt i64 %12, 0
  br i1 %13, label %14, label %15

14:                                               ; preds = %11
  store i32 -1, i32* %2, align 4
  br label %16

15:                                               ; preds = %11
  store i32 0, i32* %2, align 4
  br label %16

16:                                               ; preds = %15, %14, %8
  %17 = load i32, i32* %2, align 4
  ret i32 %17
}

declare dso_local i32* @fopen(i8*, i8*) #1

declare dso_local i32 @log_printf(i8*, i8*) #1

declare dso_local i64 @send_rpc_command(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
